# mars

./: SWARM_CONTEXT.md
src/swarm_coordinator/: package.xml  setup.cfg  setup.py
src/swarm_coordinator/config/: nav2_params_robot1.yaml  nav2_params_robot2.yaml  nav2_params_robot3.yaml  nav2_params_robot4.yaml
src/swarm_coordinator/launch/: multi_robot_swarm.launch.py
src/swarm_coordinator/resource/: swarm_coordinator
src/swarm_coordinator/swarm_coordinator/: goal_coordinator.py  pose_initializer.py
